--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "debounce": "^1.2.1",
+    "gsap": "^3.7.0",
+    "lodash": "^4.17.21",
+    "vue": "^2.6.11",
+    "vue2-touch-events": "^3.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
